--- a/aegon-sass-library/components/_radio.scss
+++ b/aegon-sass-library/components/_radio.scss
@@ -34,3 +34,9 @@ label.radio {
     }
   }
 }
+
+.radio--white {
+  span.radio {
+    background: $white !important;
+  }
+}
