--- a/aegon-sass-library/components/_text-input.scss
+++ b/aegon-sass-library/components/_text-input.scss
@@ -127,3 +127,7 @@ input[type=radio] {
     width: 70px;
   }
 }
+
+input.input--white {
+  background: $white;
+}
